--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Bitcoin API:</h1>
-    <p>Please use localhost:8000/api/btc-year</p>
+    <p>Please use https://ng-crypto-api-aa9bced31d32.herokuapp.com/api/</p>
+    <input type="text">
+    <button type='submit'>Submit</button>
+
+    <h2></h2>
+    <script src="js/main.js" type='text/javascript'></script>
 </body>
 </html>
