added query param

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Bitcoin API:</h1>
     <p>Please use https://ng-crypto-api-aa9bced31d32.herokuapp.com/api/</p>
-    <input type="text">
+    <input type="text" id="cryptoCoin">
+    <input type="text" id='cryptoYr'>
     <button type='submit'>Submit</button>
 
     <h2></h2>
