--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Bitcoin API:</h1>
-    <p>Please use https://ng-crypto-api-aa9bced31d32.herokuapp.com/api/</p>
+    <p>Please use https://ng-crypto-api-aa9bced31d32.herokuapp.com/api/coin/year</p>
     <input type="text" id="cryptoCoin">
     <input type="text" id='cryptoYr'>
     <button type='submit'>Submit</button>
